...

    <ImageButton
        android:id="@+id/frameGuess"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/guessButton"
        app:layout_constraintEnd_toEndOf="@+id/guessButton"
        app:layout_constraintStart_toStartOf="@+id/guessButton"
        app:layout_constraintTop_toTopOf="@+id/guessButton"
        app:srcCompat="@drawable/back_frame_white"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
        android:contentDescription="@string/content_description_ImageButton" />
...
        android:id="@+id/guessButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@null"
        android:text="@string/guess_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guessEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/border_button_white"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/guess_button_text" />

    <ImageButton
        android:id="@+id/microphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audioVisualizer"
        app:layout_constraintVertical_bias="0.595"
        app:srcCompat="@drawable/ic_baseline_mic_24"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/content_description_ImageButton" />

    <ImageButton
...
        tools:ignore="SpeakableTextPresentCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cross"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/audioVisualizer"
        app:layout_constraintStart_toStartOf="@+id/audioVisualizer"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="false"
        app:lottie_fileName="cross.json"
...
