<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mode_container"
    android:layout_marginTop="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/presentation"
            android:layout_width="match_parent"
            android:layout_height="57dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mode_selection"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555"
                app:srcCompat="@drawable/baseline_navigate_before_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/info"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="6dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/mode_selection"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444"
                app:srcCompat="@drawable/baseline_settings_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/mode_selection"
                android:layout_width="283dp"
                android:layout_height="68dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/mode_selection"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/funny"
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <CheckBox
                android:id="@+id/checkBox"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="97dp"
                android:layout_height="49dp"
                android:fontFamily="@font/bungee_inline"
                android:text="@string/funny"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.647"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_info_24"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--                    TIMED MODE                         -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/race"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageButton
                android:id="@+id/raceInfoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.302"
                app:srcCompat="@drawable/ic_baseline_info_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/timedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/timedDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/raceButton_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/raceButton_"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_button"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center_horizontal"
                android:text="@string/timed"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--                    SURVIVAL MODE                         -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/survival"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="8dp">

            <ImageButton
                android:id="@+id/infoSurvival"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="@+id/survivalButton_"
                app:layout_constraintEnd_toEndOf="@+id/survivalButton_"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/survivalButton_"
                app:layout_constraintVertical_bias="0.29"
                app:srcCompat="@drawable/ic_baseline_info_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/survivalDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/survivalDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/survivalButton_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.559" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/survivalButton_"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_button"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center_horizontal"
                android:text="@string/survival"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--                    REGULAR MODE                         -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/classic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <ImageButton
                android:id="@+id/regularInfoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.282"
                app:srcCompat="@drawable/ic_baseline_info_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/classicDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/classicDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/regularButton_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/regularButton_"
                app:layout_constraintVertical_bias="0.453" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/regularButton_"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_button"
                android:fontFamily="@font/bungee_inline"
                android:gravity="center_horizontal"
                android:text="@string/classic"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.235" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>