...
                    android:contentDescription="@string/button_to_expand_playlist"
                    android:rotation="-90"
                    android:rotationX="0"
                    android:rotationY="0"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/likeView"
                    app:layout_constraintHorizontal_bias="0.652"
                    app:layout_constraintStart_toEndOf="@+id/playPreview"
                    app:layout_constraintTop_toBottomOf="@+id/likeView"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/baseline_navigate_before_24"
                    app:tint="@color/ivory"
                    tools:ignore="SpeakableTextPresentCheck" />

...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/base_cardview">

                <ImageButton
                    android:id="@+id/startGame"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
...
